# habits_tracker

./: .env_example  .flake8  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  run_bot.py
.github/workflows/: deploy.yml
config/: settings.py  urls.py
fixtures/: init_data.json
habits/: models.py  pagination.py  permissions.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
habits/migrations/: 0001_initial.py  0002_initial.py  0003_alter_habit_reward.py
nginx/: nginx.conf
telegram_bot/: bot.py  handlers.py  services.py
users/: models.py  serializers.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_managers.py  0003_user_telegram_chat_id_user_telegram_token.py  0004_remove_user_telegram_token.py
